# dtrpg-sdk.rs

./: .gitignore  .gitmodules  .release-plz.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  RELEASE.md  SECURITY.md  build.rs  cliff.toml  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  bump-version.yaml  ci.yaml  debug.yaml  pr.yaml  pr.yml  prepare-release.yaml  release-old.yaml  release.yaml  tag-release.yaml
API/: openapi.yaml
openspec/changes/add-crate-release-workflow/: tasks.md
openspec/changes/archive/2026-06-28-define-rust-auth-session-behavior/specs/rust-authentication-flow/: spec.md
openspec/changes/archive/2026-06-28-define-rust-auth-session-behavior/specs/rust-sdk-configuration/: spec.md
openspec/changes/archive/2026-06-28-define-rust-auth-session-behavior/specs/rust-session-lifecycle/: spec.md
openspec/changes/archive/2026-06-28-define-rust-library-behavior/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-28-define-rust-library-behavior/specs/rust-library-types/: spec.md
openspec/changes/archive/2026-07-04-credential-login-exchange/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-add-crate-release-workflow/: design.md  proposal.md
openspec/changes/archive/2026-07-09-add-crate-release-workflow/specs/crate-release-publishing/: spec.md
openspec/changes/archive/2026-07-09-fix-create-product-list-response-decode/: proposal.md  tasks.md
openspec/changes/archive/2026-07-09-fix-create-product-list-response-decode/specs/rust-library-client/: spec.md
openspec/changes/archive/2026-07-10-prepare-download-file-index/: proposal.md  tasks.md
openspec/changes/archive/2026-07-10-prepare-download-file-index/specs/rust-library-client/: spec.md
openspec/changes/archive/2026-07-17-expose-retry-after-header/: design.md  tasks.md
openspec/changes/credential-login-exchange/: tasks.md
openspec/changes/define-rust-auth-session-behavior/: design.md  proposal.md  tasks.md
openspec/changes/define-rust-library-behavior/specs/rust-library-client/: spec.md
openspec/changes/expose-retry-after-header/: proposal.md  tasks.md
openspec/changes/fix-create-product-list-response-decode/: design.md  tasks.md
openspec/changes/fix-create-product-list-response-decode/specs/rust-library-client/: spec.md
openspec/changes/prepare-download-file-index/: design.md
openspec/specs/crate-release-publishing/: spec.md
openspec/specs/credential-login-exchange/: spec.md
openspec/specs/rate-limit-retry-after/: spec.md
openspec/specs/rust-authentication-flow/: spec.md
openspec/specs/rust-library-client/: spec.md
openspec/specs/rust-library-types/: spec.md
openspec/specs/rust-sdk-configuration/: spec.md
openspec/specs/rust-session-lifecycle/: spec.md
src/: auth.rs  auth_client.rs  client.rs  config.rs  credential_login.rs  error.rs  lib.rs  library.rs  openapi.rs  sdk.rs
src/auth/: credential_login.rs  key_exchange.rs  mod.rs  session.rs
(+1 files in other folders)
