[package]
name = "dtrpg-sdk"
description = "A Rust SDK for DTRPG API"
version = "0.0.12"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pilgrimagesoftware/dtrpg-sdk.rs"
homepage = "https://github.com/pilgrimagesoftware/dtrpg-sdk.rs"
keywords = ["dtrpg", "api", "sdk"]
categories = ["api-bindings", "rust"]
authors = ["Paul Schifferer <paul@schifferers.net>"]
exclude = [
    "*.orig",
    ".github/*",
    ".gitignore",
    ".rust-version",
    ".editorconfig",
    ".cargo_vcs_info.json",
]
build = "build.rs"

[dependencies]
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
