[package]
name = "dtrpg-sdk"
description = "A Rust SDK for DTRPG API"
version = "0.1.1"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pilgrimagesoftware/dtrpg-sdk.rs"
homepage = "https://github.com/pilgrimagesoftware/dtrpg-sdk.rs"
documentation = "https://docs.rs/dtrpg-sdk"
keywords = ["dtrpg", "api", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]
authors = ["Paul Schifferer <paul@schifferers.net>"]
exclude = [
    "*.orig",
    ".github/*",
    ".gitignore",
    ".rust-version",
    ".editorconfig",
    ".cargo_vcs_info.json",
    ".release-plz.toml",
    "AGENTS.md",
    "CLAUDE.md",
    "API/AGENTS.md",
    "API/CLAUDE.md",
    "API/.github/*",
    "openspec/*",
    "RELEASE.md",
]
build = "build.rs"

[dependencies]
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
